...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.detail.DetailMovieActivity">

    <ImageView
        android:id="@+id/backdrop_path"
        style="@style/ImageViewPoster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster"
                style="@style/ImageViewPoster"
                android:layout_width="@dimen/width_poster"
                android:layout_height="@dimen/height_poster"
                android:paddingTop="@dimen/_20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_item_title"
                style="@style/mainTitle"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_20dp"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
...
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating" />

                    <TextView
                        android:id="@+id/tv_detail_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@color/dark_gray" />

                </LinearLayout>
...
                            android:paddingStart="@dimen/_0dp"
                            android:paddingEnd="@dimen/_10dp"
                            android:src="@drawable/ic_fire"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            tools:text="6767.6" />

                    </LinearLayout>
...
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews" />

                    <TextView
                        android:id="@+id/tv_sum_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote"
                        android:textColor="@color/dark_gray" />

                </LinearLayout>
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/TextViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/desc"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:text="@string/release_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <TextView
                android:id="@+id/tv_date_release"
                style="@style/TextViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_date"
...
                android:text="@string/languages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_release" />

            <TextView
                android:id="@+id/tv_language"
                style="@style/TextViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
