<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_favorite"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_catalogue"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ic_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie"
                android:src="@drawable/ic_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_movie" />

            <TextView
                android:id="@+id/tv_movies_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_favorite"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_movies_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_movies_title" />

            <ProgressBar
                android:id="@+id/progress_bar_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tv_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_movies">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_catalogue"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie"
                android:src="@drawable/ic_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tv_show_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_show"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_tv_show_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_show_favorite"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_tv_show_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_tv_show_title" />

            <ProgressBar
                android:id="@+id/progress_bar_tv_shows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>