...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tv_show.detail.DetailTVShowActivity">

    <ImageView
        android:id="@+id/tv_backdrop_path"
        style="@style/ImageViewPoster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
...
                android:layout_height="@dimen/height_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_show_title"
                style="@style/mainTitle"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_original_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:gravity="start"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tv_show_title"
...
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/ic_popular"
                app:layout_constraintTop_toBottomOf="@id/about" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                android:justificationMode="inter_word"
                android:text="@string/desc"
                app:layout_constraintStart_toStartOf="@id/overview"
...
                android:text="@string/first_air_date"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toEndOf="@+id/tv_popularity"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <TextView
                android:id="@+id/tv_air_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                app:layout_constraintStart_toStartOf="@id/air_date"
                app:layout_constraintTop_toBottomOf="@id/popularity"
                tools:text="2020 Mei 18" />
...
