<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="movie">Movie</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorite">Favorite</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rate">%.1f ⭐</string>
    <string name="rates">%.1f ⭐ from %d votes</string>
    <string name="episode">%d episodes</string>
    <string name="episodes_seasons">%d episodes, %d seasons</string>
    <string name="desc">Description</string>
    <string name="reviews">Reviews</string>
    <string name="rating">Rating</string>
    <string name="vote">17</string>
    <string name="about_this_movie">About this Movie</string>
    <string name="about_this_show">About this TV Show</string>
    <string name="price">Buy from IDR %s</string>
    <string name="share">Share</string>
    <string name="share_movie">Let\'s watch \"%s\" movie</string>
    <string name="share_tv_show">Let\'s watch \"%s\" TV Show</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="status">Status</string>
    <string name="released">Released</string>
    <string name="ended">Ended</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release Date</string>
    <string name="first_air_date">First Air Date</string>
    <string name="seasons">Seasons</string>
    <string name="language">%s  %s</string>
    <string name="languages">Language</string>
    <string name="image_poster">Image Poster</string>
    <string name="budget">Budget</string>
    <string name="budgets">$ %s</string>
    <string name="text_count_item">%d items</string>
    <string name="movie_favorite">Movie Favorite</string>
    <string name="tv_show_favorite">TV Show Favorite</string>
    <string name="no_favorites_tv_show">No favorites TV Show yet</string>
    <string name="no_favorites_movie">No favorites Movie yet</string>
    <string name="error">Error..</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="remove_favorite">Remove to Favorites</string>
    <string name="items">items</string>
    <string name="text_view">Text of the view</string>
</resources>